test/users/ssridhar/atomic/support/omitElseCondUsingAtomicFlag.good
omitElseCondUsingAtomicFlag.chpl:2: error: unknown pragma: "omit else from atomic"
