test/users/ssridhar/atomic/support/omitElseCondUsingAtomicFlag.future
feature request: support conditional atomic pragma
